# feedrr

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  deploy.yml  release.yml  status-checks.yml  test.yml
app/: __init__.py  main.py  middleware.py
app/api/: __init__.py  deps.py
app/config/: config.development.json  config.json  feeds.json
app/core/: __init__.py  config.py  constants.py  rate_limit.py  security.py
app/db/: __init__.py  base.py  crud.py  init_db.py  session.py
app/models/: __init__.py  api_key.py  category.py  destination.py  feed.py  feed_request.py  filter.py  login_config.py  publication_history.py  user.py
app/routers/: categories.py  feeds.py  messaging.py  users.py
app/schemas/: __init__.py  auth.py  category.py  feed.py  feed_request.py  filter.py  publication.py  user.py
app/scripts/: setup_config.py
app/services/: __init__.py  cache_service.py  email_service.py  feed_manager.py  feed_processor.py  feed_service.py  filter_service.py  magic_link_service.py  message_dispatcher.py  message_service.py  notification_service.py  (+4 more)
backend/: Dockerfile
config/: config.example.json  config.test.json
frontend/: .eslintrc.js  Dockerfile  cypress.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
scripts/: entrypoint.sh
tests/: __init__.py  conftest.py  test_cache.py  test_feed_crud.py  test_feed_manager.py  test_middleware.py  test_rate_limiting.py  test_rss_parser.py  test_telegram_sender.py
(+175 files in other folders)
